Resolves css ambiguity, fixing project pages on small screens

--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -240,12 +240,12 @@ figure.video.ratio-80 {
 	}
 }
 
-.small {
+img.small {
 	margin-top: 0.6em;
 	max-width: 230px;
 }
 
-.no-border {
+img.no-border {
 	border: 0 !important;
 
 	img {
